--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+//HOLA NINA
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
@@ -74,7 +75,7 @@
 		</div>
 	</header>
 	<!-- /Header -->
-	
+	<!--
 	<!-- Banner -->
 	<div class="banner">
 		<img src="images/img-home-banner.jpg" alt="Banner de ofertas">
