--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,6 +83,12 @@
 	<!-- /Banner -->
 
 	<!-- Novedades -->
+
+	//USAR FOR	
+	<!--<% for (let i=0; i<products.length; i++){ %>
+		<li><a href="/products/detalle/id/<%= products[i].id %>"><%= products[i].nombre %></a></li>  
+		<% } %> -->
+
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
@@ -150,6 +156,8 @@
 			</div>
 		</div>
 	</div>
+
+
 	<!-- /Novedades -->
 	<!-- Más comentados -->
 	<div class="container products-wrapper">
