--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,6 +17,29 @@
 </head>
 
 <body>
+	//FORMULARIO DE REGISTRACIÓN
+	<form action="/registrar" method="GET">
+		<label for="email">Email:</label>
+		<input type="email" id="email" name="email">
+	  
+		<label for="usuario">Usuario:</label>
+		<input type="text" id="usuario" name="usuario">
+	  
+		<label for="contraseña">Contraseña:</label>
+		<input type="password" id="contraseña" name="contraseña">
+	  
+		<label for="fecha_nacimiento">Fecha de nacimiento:</label>
+		<input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
+	  
+		<label for="nro_documento">Número de documento:</label>
+		<input type="number" id="nro_documento" name="nro_documento">
+	  
+		<label for="foto_perfil">Foto de perfil:</label>
+		<input type="text" id="foto_perfil" name="foto_perfil">
+	  
+		<button type="submit">Registrarse</button>
+	  </form>
+	
 	<!-- Header -->
 	<header class="main-header">
 		<div class="container">
