--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,16 +88,16 @@
 				<h2 class="products-title">Novedades</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			//USAR FOR	
+			
 			<% for (let i=0; i<4; i++){ %>
 				<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="product.ejs">
+							<a href="/product/id/<%= producto[i].id%>">
 								<figure class="product-box_image">
 									<img src="images/products/default-image.png" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2 <%= producto[i].nombre%> /h2>
 									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 										delectus ex</p>
 									<p>Comentarios: 12</p>
