--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
 	</header>
 	<!-- /Header -->
 	<!--
-	<!-- Banner -->
+	 Banner -->
 	<div class="banner">
 		<img src="images/img-home-banner.jpg" alt="Banner de ofertas">
 	</div>
@@ -89,15 +89,15 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			
-			<% for (let i=0; i<4; i++){ %>
+			<% for (let i=0; i<lista.lenght; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="/product/id/<%= producto[i].id%>">
+							<a href= "/products/id/<%=lista[i].id%>">
 								<figure class="product-box_image">
-									<img src="images/products/default-image.png" alt="cafetera moulinex">
+									<img src="<%= lista[i].imagen%>" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2 <%= producto[i].nombre%> /h2>
+									<h2> <%= lista[i].nombre%> </h2>
 									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 										delectus ex</p>
 									<p>Comentarios: 12</p>
