--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,9 +87,10 @@
 			<div class="col-12">
 				<h2 class="products-title">Novedades</h2>
 			</div>
-			<!-- Show the "ultimos" products -->
+		
 			
-			<% for (let i=0; i<lista.lenght; i++) { %>
+			<section>
+			<% for (let i=0; i<4; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
 							<a href= "/products/id/<%=lista[i].id%>">
@@ -108,7 +109,7 @@
 				<% } %>
 		</div>
 	</div>
-
+</section>
 
 	<!-- /Novedades -->
 	<!-- Más comentados -->
