--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,89 +16,9 @@
 	<link rel="stylesheet" href="./css/app.css">
 </head>
 
-<body>
-	//FORMULARIO DE REGISTRACIÓN
-	<form action="/registrar" method="GET">
-		<label for="email">Email:</label>
-		<input type="email" id="email" name="email">
-	  
-		<label for="usuario">Usuario:</label>
-		<input type="text" id="usuario" name="usuario">
-	  
-		<label for="contraseña">Contraseña:</label>
-		<input type="password" id="contraseña" name="contraseña">
-	  
-		<label for="fecha_nacimiento">Fecha de nacimiento:</label>
-		<input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
-	  
-		<label for="nro_documento">Número de documento:</label>
-		<input type="number" id="nro_documento" name="nro_documento">
-	  
-		<label for="foto_perfil">Foto de perfil:</label>
-		<input type="text" id="foto_perfil" name="foto_perfil">
-	  
-		<button type="submit">Registrarse</button>
-	  </form>
-	
+<body>	
 	<!-- Header -->
-	<header class="main-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-5 col-md-2">
-					<a href="index.ejs" class="main-header_home-link">
-						<img src="./images/logo-mercado-liebre.svg">
-					</a>
-				</div>
-	
-				<div class="col-7 col-md-6">
-					<form action="search-results.ejs" method="GET" class="search-form">
-						<input type="text" name="search" placeholder="Buscar productos, marcas y más"
-							class="search-form_input">
-						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
-					</form>
-				</div>
-	
-				<div class="col-12 col-md-4">
-					<a class="main-header_credit-link">
-						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
-					</a>
-				</div>
-			</div>
-	
-			<button class="btn-toggle-navbar">
-				<i class="fas fa-bars"></i>
-			</button>
-	
-			<nav class="main-navbar">
-				<ul class="left-navbar">
-					<li><a href="index.ejs">Todos los productos</a></li>
-					<!-- solo logueado <li><a href="">Cargar productos</a></li> -->
-				</ul>
-	
-				<ul class="right-navbar">
-					<!-- Solo logueado <li><a href="profile.html">
-								Nombre del usuario <i class="fas fa-user"></i>
-							</a>
-						</li>
-						<li>
-							<form action="" method="post">
-								<button class="logout" type="submit">
-									Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-								</button>
-							</form>
-						</li> -->
-					<li>
-						<a href="register.ejs">Creá tu cuenta <i class="far fa-address-card"></i>
-						</a>
-					</li>
-					<li>
-						<a href="login.ejs">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</header>
+	<%- include('./partials/header.ejs') %>
 	<!-- /Header -->
 
 	<!-- Novedades -->
@@ -108,46 +28,20 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de registro. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
-			</h2>
-
+	
+	//formulario de registración
+	<form action="/login" method="GET" class=""> 
+		<label>EMAIL</label><input type="email" placeholder="EMAIL">
+		<label>NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO">
+		<label>CONTRASEÑA</label><input type="password" placeholder="CONTRASEÑA">
+		<label>FECHA DE NACIMIENTO</label><input type="date" placeholder="FECHA NACIMIENTO">
+		<label>NUMERO DE DOCUMENTO</label><input type="number" placeholder="NRO DOCUMENTO"> 
+		<label>FOTO DE PERFIL</label><input type="text" placeholder="FOTO DE PERFIL">
+		<button type="submit"> REGISTRARME </button>
+	</form>
 
 	<!-- footer -->
-	<footer class="main-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-credit-card"></i>
-						<h2>Pagá con tarjeta o en efectivo</h2>
-						<p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago.
-							¡Y
-							siempre es seguro!</p>
-					</article>
-				</div>
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-gift"></i>
-						<h2>Envío gratis desde $ 1.999</h2>
-						<p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
-							beneficio de Mercado Puntos.</p>
-					</article>
-				</div>
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-user-shield"></i>
-						<h2>Seguridad, de principio a fin</h2>
-						<p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-							siempre protegido.</p>
-					</article>
-				</div>
-			</div>
-		</div>
-	</footer>
+	<%- include('./partials/footer') %>
 	<!-- /footer -->
 </body>
 
