--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,7 +29,7 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 	
-	//formulario de registración
+<!-- formulario de registración -->
 	<form action="/login" method="GET" class=""> 
 		<label>EMAIL</label><input type="email" placeholder="EMAIL">
 		<label>NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO">
