--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,8 @@
 								<article class="product-box_data">
 									<h2> <%= lista[i].nombre%> </h2>
 									<p><%= lista[i].Técnica%></p>
-									<p>Comentarios: 12</p>
+									<p><%= lista[i].Dimensiones%></p>
+									<p><%= lista[i].Creación%></p>
 								</article>
 							</a>
 						</section>
@@ -61,20 +62,27 @@
 				<h2 class="products-title">Más comentados</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.ejs">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
+			<section>
+				<% for (let i=0; i<5; i++) { %>
+					<div class="col-12 col-sm-6 col-lg-3">
+							<section class="product-box">
+								<a href= "/products/id/<%=lista[i].id%>">
+									<figure class="product-box_image">
+										<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
+									</figure>
+									<article class="product-box_data">
+										<h2> <%= lista[i].nombre%> </h2>
+										<p><%= lista[i].Técnica%></p>
+										<p><%= lista[i].Dimensiones%></p>
+										<p><%= lista[i].Creación%></p>
+									</article>
+								</a>
+							</section>
+						</div>
+					<% } %>
 			</div>
+		</div>
+	</section>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
 					<a href="product.ejs">
