--- a/public/css/app.css
+++ b/public/css/app.css
@@ -68,7 +68,8 @@ hr {
 /*====== Main Header ======*/
 .main-header {
   padding: 15px 0;
-  background-color: var(--yellow);
+  background-image: url(/images/arte-home.jpeg) ;
+  background-position: center bottom 23%;
 }
 
 .main-header_home-link,
@@ -180,6 +181,10 @@ hr {
   overflow: hidden;
   transition: 300ms;
   margin: 20px 0;
+
+}
+.col-12 {
+  display: inline-block;
 }
 
 .product-box a {
