--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
 					<a href="index.ejs" class="main-header_home-link">
-						<img src="../public/images/loniaz.png">
+						<img src="/public/images/loniaz.png">
 					</a>
 				</div>
 	
