--- a/views/product.ejs
+++ b/views/product.ejs
@@ -31,11 +31,12 @@
 			<div class="row">
 				//COMPLETAR CON ALGUNA OBRA DE ARTE
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="../images/products/default-image.png" alt="" class="product-detail-img">
+					<img src="public/images/venusdemilo.webp" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						La Afrodita de Milo (en griego, Αφροδίτη της Μήλου), más conocida como Venus de Milo,
+						es una de las estatuas más representativas del periodo helenístico de la escultura griega, y una de las más famosas esculturas de la antigua Grecia. 
+						Fue creada en algún momento entre los años 130 a. C. y 100 a. C., y se cree que representa a Afrodita (denominada Venus en la mitología romana), diosa del amor y la belleza;2 mide, aproximadamente, 211 cm de alto.
+</p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
