--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
 	</section>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.ejs">
+					<a href="/products">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
