--- a/views/product.ejs
+++ b/views/product.ejs
@@ -29,9 +29,8 @@
 		</div>
 		<div class="product-detail">
 			<div class="row">
-				//COMPLETAR CON ALGUNA OBRA DE ARTE
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="public/images/venusdemilo.webp" alt="" class="product-detail-img">
+					<img src="../public/images/venusdemilo.webp" alt="" class="product-detail-img">
 					<p class="product-detail-description">
 						La Afrodita de Milo (en griego, Αφροδίτη της Μήλου), más conocida como Venus de Milo,
 						es una de las estatuas más representativas del periodo helenístico de la escultura griega, y una de las más famosas esculturas de la antigua Grecia. 
