--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<form action="/perfil" method="GET" class=""> <!-- aca antes decia login.html -->
+			<form action="/" method="GET" class=""> <!-- aca antes decia login.html -->
 				<label>IMAGEN</label><input type="file" placeholder="FOTO DE PRODUCTO">
 				<label>NOMBRE DE PRODUCTO</label><input type="text" placeholder="NOMBRE PRODUCTO">
 				<label>DESCRIPCION</label><input type="text" placeholder="DESCRIPCION PRODUCTO">
