--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,7 +50,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+						<a href="/users">Ingresá <i class="fas fa-sign-in-alt"></i></a>
 					</li>
 				</ul>
 			</nav>
