--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
-					<a href="index.ejs" class="main-header_home-link">
+					<a href="/" class="main-header_home-link">
 						<img src="/public/images/loniaz.png">
 					</a>
 				</div>
@@ -29,7 +29,7 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li><a href="index.ejs">Todos los productos</a></li>
+					<li><a href="/">Todos los productos</a></li>
 					<!-- solo logueado <li><a href="">Cargar productos</a></li> -->
 				</ul>
 	
