--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -28,10 +28,25 @@
 				<h2 class="products-title">Resultados de búsqueda</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá van los resultados de búsqueda. <br>
-			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
-			////////////////
-			</h2>
+			<div class="container products-wrapper">
+				<div class="row">
+					<%for (let i=0; i<4; i++){ %>
+					<div>
+						<section>
+							<a href="/product/detalle/id/<%=lista[i].id%>"> 
+								<figure class="product-box_image">
+									<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
+								</figure>
+								<article class="product-box_data">
+									<h2><%=lista[i].nombre%></h2>
+									<p><%=lista[i].descripcion%></p>
+									<p>Comentarios: !!!!!</p> 
+								</article>
+							</a>
+						</section>
+					</div>
+					<%}%>
+			
 
 
 	<!-- footer -->
