--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,7 @@
 	<!-- Header -->
 	<%- include('./partials/header.ejs') %>
 	<!-- /Header -->
-	<!--
-	<!-- Novedades -->
+	<!--Novedades -->
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
@@ -48,7 +47,7 @@
 	</div>
 </section>
 
-	<!-- /Novedades --> //HACER FOR !!!
+	<!-- /Novedades --> 
 	<!-- Más comentados -->
 	<div class="container products-wrapper">
 		<div class="row">
@@ -77,52 +76,7 @@
 			</div>
 		</div>
 	</section>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.ejs">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.ejs">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-		</div>
-	</div>
-	<!-- /Más comentados -->
-
+			
 
 	<!-- footer -->
 	<%- include('./partials/footer') %>
