--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,25 +5,24 @@
 				<div class="col-12 col-lg-4">
 					<article class="footer-data">
 						<i class="fas fa-credit-card"></i>
-						<h2>Pagá con tarjeta o en efectivo</h2>
-						<p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
-							siempre es seguro!</p>
+						<h2>Contactanos por:</h2>
+						<p>Instagram : @loniazartgallery</p>
+						<p>Whatsapp : +5491167856724</p>
+						<p>Email : loniazartgallery@gmail.com</p>
 					</article>
 				</div>
 				<div class="col-12 col-lg-4">
 					<article class="footer-data">
 						<i class="fas fa-gift"></i>
-						<h2>Envío gratis desde $ 1.999</h2>
-						<p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
-							beneficio de Mercado Puntos.</p>
+						<h2>Colaboradores</h2>
+						<p>Varios profesionales de todo el mundo colaboran para mantener actualizado este sitio que pretende manteneros al dí­a de lo que ocurre en la web. Aplicaciones, noticias, eventos… intentaremos, entre todos, que no se nos escape nada.</p>
 					</article>
 				</div>
 				<div class="col-12 col-lg-4">
 					<article class="footer-data">
 						<i class="fas fa-user-shield"></i>
 						<h2>Seguridad, de principio a fin</h2>
-						<p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-							siempre protegido.</p>
+						<p>Protegemos tus datos, utilizamos las cookies necesarias</p>
 					</article>
 				</div>
 			</div>
