--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -40,7 +40,7 @@
 								<article class="product-box_data">
 									<h2><%=lista[i].nombre%></h2>
 									<p><%=lista[i].descripcion%></p>
-									<p>Comentarios: !!!!!</p> 
+									<p><%=lista[i].comentarios%></p> 
 								</article>
 							</a>
 						</section>
