--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,13 +25,14 @@
 <!-- /Banner -->
 
 	<!--Novedades -->
+	<br><br><br><br><br><br><br><br><br><br><br>
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
 				<h2 class="products-title">Obras de arte más buscadas</h2>
 			</div>
 		
-			<section>
+			<section class="bloque">
 			<% for (let i=0; i<5; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
@@ -61,7 +62,7 @@
 				<h2 class="products-title">Más comentados</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<section>
+			<section class="bloque">
 				<% for (let i=0; i<5; i++) { %>
 					<div class="col-12 col-sm-6 col-lg-3">
 							<section class="product-box">
