--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,9 +6,9 @@
 					<article class="footer-data">
 						<i class="fas fa-credit-card"></i>
 						<h2>Contactanos por:</h2>
-						<p>Instagram : @loniazartgallery</p>
-						<p>Whatsapp : +5491167856724</p>
-						<p>Email : loniazartgallery@gmail.com</p>
+						<p class="texto">Instagram : @loniazartgallery</p>
+						<p class="texto">Whatsapp : +5491167856724</p>
+						<p class="texto">Email : loniazartgallery@gmail.com</p>
 					</article>
 				</div>
 				<div class="col-12 col-lg-4">
