--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<form action="/" method="GET" class=""> <!-- aca antes decia login.html -->
+			<form action="/" method="GET" class=""> 
 				<label>IMAGEN</label><input type="file" placeholder="FOTO DE PRODUCTO">
 				<br><br>
 				<label>NOMBRE DE PRODUCTO</label><input type="text" placeholder="NOMBRE PRODUCTO">
@@ -37,7 +37,7 @@
 				<br><br>
 				<label>FECHA DE CARGA</label><input type="date" placeholder="FECHA DE CARGA">
 				<br><br>
-				<button type="submit"> AGREGAR PRODUCTO </button>
+				<label>RECORDARME</label><input type="checkbox" placeholder="RECORDARME">
 			</form>
 
 	<!-- footer -->
