--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,15 +29,11 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<form action="/" method="GET" class=""> 
-				<label>IMAGEN</label><input type="file" placeholder="FOTO DE PRODUCTO">
+				<label>Usuario</label><input type="email" placeholder="mail">
 				<br><br>
-				<label>NOMBRE DE PRODUCTO</label><input type="text" placeholder="NOMBRE PRODUCTO">
+				<label>Contraseña</label><input type="password" placeholder="Contraseña">
 				<br><br>
-				<label>DESCRIPCION</label><input type="text" placeholder="DESCRIPCION PRODUCTO">
-				<br><br>
-				<label>FECHA DE CARGA</label><input type="date" placeholder="FECHA DE CARGA">
-				<br><br>
-				<label>RECORDARME</label><input type="checkbox" placeholder="RECORDARME">
+				<label>Recordarme</label><input type="checkbox" placeholder="Recordarme">
 			</form>
 
 	<!-- footer -->
