--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,6 +34,7 @@
 				<label>Contraseña</label><input type="password" placeholder="Contraseña">
 				<br><br>
 				<label>Recordarme</label><input type="checkbox" placeholder="Recordarme">
+				<button type="submit"> Iniciar sesión </button>
 			</form>
 
 	<!-- footer -->
