--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -30,7 +30,7 @@
 			<nav class="main-navbar">
 				<ul class="left-navbar">
 					<li><a href="/">Todos los productos</a></li>
-					<li><a href="product/add">Cargar productos</a></li>
+					<li><a href="/product-add">Cargar productos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
@@ -46,6 +46,12 @@
 						</form>
 					</li>
 				</ul>
+
+				<ul class="right-navbar">
+					<li><a href="/profile-edit">Editar perfil <i class="fas fa-sign-in-alt"></i></a>
+					</li>	
+				</ul>
+		
 			</nav>
 		</div>
 	</header>
