--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -179,7 +179,7 @@
 
 
 	<!-- footer -->
-	<%- include('-/partials/footer') %>
+	<%- include('./partials/footer') %>
 	<!-- /footer -->
 </body>	
 </html>
