--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -21,24 +21,23 @@
 	<%- include('./partials/headerLogueado') %>
 	<!-- /Header -->
 
-	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Editar mi perfil</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			
-			<form action="/perfil" method="GET" class=""> 
-				<label>EMAIL</label><input type="email" placeholder="EMAIL">
-				<label>NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO">
-				<label>CONTRASEÑA</label><input type="password" placeholder="CONTRASEÑA">
-				<label>FECHA DE NACIMIENTO</label><input type="date" placeholder="FECHA NACIMIENTO">
-				<label>NUMERO DE DOCUMENTO</label><input type="number" placeholder="NRO DOCUMENTO"> 
-				<label>FOTO DE PERFIL</label><input type="text" placeholder="FOTO DE PERFIL">
-				<button type="submit"> GUARDAR </button>
-			</form>
+<!-- Novedades -->
+<div class="container products-wrapper">
+	<div class="row">
+		<div class="col-12">
+			<h2 class="products-title">Editar mi perfil</h2>
+		</div>
+		<!-- Show the "ultimos" products -->
 
+		<form action="/profile" method="GET" class="registroform"> <!-- aca antes decia login.html -->
+			<label class = "registroformlabel">EMAIL</label><input type="email" placeholder="EMAIL" class = "registroinput">
+			<label class = "registroformlabel">NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO" class = "registroinput">
+			<label class = "registroformlabel">CONTRASEÑA</label><input type="password" placeholder="CONTRASEÑA" class = "registroinput">
+			<label class = "registroformlabel">FECHA DE NACIMIENTO</label><input type="date" placeholder="FECHA NACIMIENTO" class = "registroinput">
+			<label class = "registroformlabel">NUMERO DE DOCUMENTO</label><input type="number" placeholder="NRO DOCUMENTO" class = "registroinput"> 
+			<label class = "registroformlabel">FOTO DE PERFIL</label><input type="text" placeholder="FOTO DE PERFIL" class = "registroinput">
+			<button type="submit" class = "registrobutton"> CONFIRMAR CAMBIOS </button>
+		</form>
 
 	<!-- footer -->
 	<%- include('./partials/footer') %>
