--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -29,7 +29,7 @@
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 					<h1 class="main-title">Nombre del usuario 
-						<a href="profile-edit.ejs">
+						<a href="profile-edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
