--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -35,7 +35,7 @@
 	
 				<ul class="right-navbar">
 					<li><a href="/profile">
-							<%- datosUsuario.nombreUsuario %> <i class="fas fa-user"></i>
+							 datosUsuario.nombreUsuario  <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
@@ -48,7 +48,7 @@
 				</ul>
 
 				<ul class="right-navbar">
-					<li><a href="/profile-edit">Editar perfil <i class="fas fa-sign-in-alt"></i></a>
+					<li><a href="/profile/editar">Editar perfil <i class="fas fa-sign-in-alt"></i></a>
 					</li>	
 				</ul>
 		
