--- a/public/css/app.css
+++ b/public/css/app.css
@@ -553,3 +553,11 @@ r_credit-link {
     margin: auto;
   }
 }
+
+.h1{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.h2{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
