--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,4 +5,5 @@ body {
 
 a {
   color: #00B7FF;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
