--- a/public/css/app.css
+++ b/public/css/app.css
@@ -276,7 +276,7 @@ overflow: scroll;
 
 /*====== Footer ======*/
 .main-footer {
-  background-color: #ffffff;
+  background-color: #000000;
   padding: 20px 0;
   margin-top: 80px;
  
