--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
 				<% for (let i=0; i<5; i++) { %>
 					<div class="col-12 col-sm-6 col-lg-3">
 							<section class="product-box">
-								<a href= "/products/id/<%=lista[i].id%>">
+								<a href= "/products/detalle/id/<%=lista[i].id%>">
 									<figure class="product-box_image">
 										<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
 									</figure>
