--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,7 +30,7 @@
 			<!-- Show the "ultimos" products -->
 	
 <!-- formulario de registración -->
-	<form action="/login" method="GET" class=""> 
+	<form action="/users" method="GET" class=""> 
 		<label>EMAIL</label><input type="email" placeholder="EMAIL">
 		<br>
 		<br>
