--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -4,16 +4,17 @@
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
 					<a href="/" class="main-header_home-link">
-						<img src="/images/arte-home.jpeg">
+						<img src="/images/logo.jpeg">
 					</a>
 				</div>
-	
+
 				<div class="col-7 col-md-6">
 					<form action="" method="GET" class="search-form">
 						<input type="text" name="search" placeholder="Buscar obras" class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
 				</div>
+
 	<!--
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
@@ -35,7 +36,7 @@
 	
 				<ul class="right-navbar">
 					<li><a href="/profile">
-							 datosUsuario.nombreUsuario  <i class="fas fa-user"></i>
+						<%- datosUsuario.nombreUsuario %>  <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
