intento de for para mas comentados

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Más comentados</h2>
+				<h2 class="products-title">Obras de arte más comentadas</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 			<section class="bloque">
