--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,13 +53,41 @@
 		</div>
 	</div>
 </section>
+	<!--Novedades -->
+	<div class="container products-wrapper">
+		<div class="row">
+			<div class="col-12">
+				<h2 class="products-title">Obras de arte más buscadas</h2>
+			</div>
+		
+			<section class="bloque">
+			<% for (let i=0; i<5; i++) { %>
+				<div class="col-12 col-sm-6 col-lg-3">
+						<section class="product-box">
+							<a href= "/products/detalle/id/<%=lista[i].id%>">
+								<figure class="product-box_image">
+									<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
+								</figure>
+								<article class="product-box_data">
+									<h2> <%= lista[i].nombre%> </h2>
+									<p><%= lista[i].Técnica%></p>
+									<p><%= lista[i].Dimensiones%></p>
+									<p><%= lista[i].Creación%></p>
+								</article>
+							</a>
+						</section>
+					</div>
+				<% } %>
+		</div>
+	</div>
+</section>
 
-	<!-- /Novedades --> 
+
 	<!-- Más comentados -->
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Obras de arte más comentados</h2>
+				<h2 class="products-title">Obras de arte más comentadas</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 			<section class="bloque">
@@ -71,10 +99,10 @@
 										<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
 									</figure>
 									<article class="product-box_data">
-										<h2> <%= lista[i].nombre%> </h2>
+										<h2><%= lista[i].nombre%> </h2>
 										<p><%= lista[i].Técnica%></p>
 										<p><%= lista[i].Dimensiones%></p>
-										<p><%= lista[i].Creación%></p>
+										<p><%= lista[i].Creación%></p> 
 									</article>
 								</a>
 							</section>
