arregle algo de data

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,8 +28,8 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title">Nombre del usuario 
-						<a href="profile-edit">
+					<h1 class="main-title"> N
+						<a href="./profile-edit.ejs">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
@@ -38,7 +38,7 @@
 				<div>
 					<ul class="">
 						<li>8 productos</li>
-						<li>200 seguidores</li>
+						<li>2000 seguidores</li>
 						<li>300 comentarios</li>
 					</ul>
 				</div>
