--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -31,7 +31,7 @@
 			<nav class="main-navbar">
 				<ul class="left-navbar">
 					<li><a href="/">Todos los productos</a></li>
-					<li><a href="/product-add">Cargar productos</a></li>
+					<li><a href="/products/add">Cargar productos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
