link arreglado en search

--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -33,7 +33,7 @@
 					<%for (let i=0; i<4; i++){ %>
 					<div>
 						<section>
-							<a href="/product/detalle/id/<%=lista[i].id%>"> 
+							<a href="/products/detalle/id/<%=lista[i].id%>"> 
 								<figure class="product-box_image">
 									<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
 								</figure>
