--- a/views/product.ejs
+++ b/views/product.ejs
@@ -22,13 +22,13 @@
 	<!-- product detail -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title">Venus de Milo</h2> 
 			<p class="product-detail-description">
 				<a href="/product/edit/id/">Editar</a>
 			</p>
 		</div>
 
-
+<!---
 		<section class="col-12 col-lg-4">
 			<% for (let i=0; i<comentarios.length; i++) { %>
 					<div class="comments">
@@ -58,7 +58,7 @@
 		</div>	</section>
 	
 
-
+	-->
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
