--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,7 +28,7 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"> N
+					<h1 class="main-title"> NOMBRE!!!
 						<a href="./profile-edit">
 							<i class="fas fa-cog"></i>
 						</a>
