--- a/views/product.ejs
+++ b/views/product.ejs
@@ -28,9 +28,9 @@
 			</p>
 		</div>
 
-<!---
+<!--
 		<section class="col-12 col-lg-4">
-			<% for (let i=0; i<comentarios.length; i++) { %>
+			<% for (let i=0; i<5; i++) { %>
 					<div class="comments">
 							<a href= "/products/detalle/id/<%=comentarios[i].id%>">
 								<p class="user">
@@ -57,8 +57,8 @@
 
 		</div>	</section>
 	
-
 	-->
+
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
