--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,10 @@
 	<!-- Header -->
 	<%- include('./partials/header.ejs') %>
 	<!-- /Header -->
-
+	<!-- Banner -->
+	<div class = 'banner'>
+		<img src="images/Captura de Pantalla 2023-04-10 a la(s) 12.05.44.png" alt="Banner de ofertas"></div>
+	<!-- /Banner -->
 	<!-- Novedades -->
 	<div class="container products-wrapper">
 		<div class="row">
