--- a/views/product.ejs
+++ b/views/product.ejs
@@ -79,7 +79,7 @@
 							<div class="data">
 								<p class="user">
 								<strong> <a href="profile.ejs">Nombre usuario: LOLO123</a> </strong>
-								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+								 Muy interesante, una obra con mucha historia.</p>
 							</div>
 						</article>
 						<article>
@@ -87,7 +87,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="profile.ejs">Nombre usuario: JUANITAX17 </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									No me gusta, poco representativa.</p>
 							</div>
 						</article>
 						<article>
@@ -95,8 +95,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="profile.ejs">Nombre usuario: COLECCIONISTA2022</a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									</p>
+									Me gusta, cuanto sale?.									</p>
 							</div>
 						</article>
 						<article>
@@ -104,7 +103,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="profile.ejs">Nombre usuario: GLADYS08</a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+									Espectacular, es emocionante.</p>
 							</div>
 						</article>
 						<article>
@@ -112,8 +111,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="profile.ejs">Nombre usuario: VIVONECRACK07</a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
+									Wow, impresionante!</p>
 							</div>
 						</article>
 
