--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -14,16 +14,13 @@
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
 				</div>
-
-	<!--
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
-						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
+						
+						DeleitArte
 					</a>
 				</div>
-			</div>
-	-->
+
 			<button class="btn-toggle-navbar">
 				<i class="fas fa-bars"></i>
 			</button>
@@ -56,7 +53,6 @@
 			</nav>
 		</div>
 	</header>
-	<!-- /Header -->
+
 	
-</body>	
-</html>
+
