--- a/views/product.ejs
+++ b/views/product.ejs
@@ -24,7 +24,7 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title">Venus de Milo</h2> 
 			<p class="product-detail-description">
-				<a href="/product/edit/id/">Editar</a>
+				<a href="/products/add/">Agregar a mis productos</a>
 			</p>
 		</div>
 
