--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -33,7 +33,7 @@
 	
 				<ul class="right-navbar">
 					<li><a href="/profile">
-						<%- datosUsuario.nombreUsuario %>  <i class="fas fa-user"></i>
+						<%= usuario %>  <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
