--- a/views/product.ejs
+++ b/views/product.ejs
@@ -24,7 +24,7 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title">Venus de Milo</h2> 
 			<p class="product-detail-description">
-				<a href="/products/add/">Agregar a mis productos</a>
+				<a href="/products/add">Agregar a mis productos</a>
 			</p>
 		</div>
 
@@ -45,7 +45,7 @@
 						<div class="col-12 col-lg-4">
 								<a href= "/products/detalle/id/<%=comentarios[i].id%>">
 									<p class="user">
-										<strong> <a href="profile.ejs"><%=comentarios[i].user%></a> </strong>
+										<strong> <a href="/profile"><%=comentarios[i].user%></a> </strong>
 										<%=comentarios[i].comment%></p>
 									<article class="product-box_data">
 										
