--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,18 +28,21 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
+				<br><br><br><br><br>
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 			<form action="/" method="GET" class=""> 
-				<label>Usuario</label><input type="email" placeholder="mail">
+				<label>USUARIO</label><input class="input" type="email" placeholder="mail">
 				<br><br>
-				<label>Contraseña</label><input type="password" placeholder="Contraseña">
+				<label>CONTRASEÑA</label><input class="input"  type="password" placeholder="Contraseña">
 				<br><br>
-				<label>Recordarme</label><input type="checkbox" placeholder="Recordarme">
-				<button type="submit"> Iniciar sesión </button>
+				<label>Recordarme</label><input  class="checkbox" type="checkbox" placeholder="Recordarme">
+				<br><br>
+				<button  class="boton"  type="submit"> Iniciar sesión </button>
 			</form>
 
+			<img  src="/images/1286923.png" alt="" class="ingresafoto">
 	<!-- footer -->
 			<%- include('./partials/footer') %>
 	<!-- /footer -->
