--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,24 +31,25 @@
 	
 <!-- formulario de registración -->
 	<form action="/users" method="GET" class=""> 
-		<label>EMAIL</label><input type="email" placeholder="EMAIL">
+		<label>EMAIL</label><input class="input" type="email" placeholder="EMAIL">
 		<br>
 		<br>
-		<label>NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO">
+		<label>NOMBRE DE USUARIO</label><input class="input" type="text" placeholder="USUARIO">
 		<br>
 		<br>
-		<label>CONTRASEÑA</label><input type="password" placeholder="CONTRASEÑA">
+		<label>CONTRASEÑA</label><input class="input" type="password" placeholder="CONTRASEÑA">
 		<br><br>
-		<label>FECHA DE NACIMIENTO</label><input type="date" placeholder="FECHA NACIMIENTO">
+		<label>FECHA DE NACIMIENTO</label><input class="input" type="date" placeholder="FECHA NACIMIENTO">
 		<br><br>
-		<label>NUMERO DE DOCUMENTO</label><input type="number" placeholder="NRO DOCUMENTO">
+		<label>NUMERO DE DOCUMENTO</label><input class="input" type="number" placeholder="NRO DOCUMENTO">
 		<br><br> 
-		<label>FOTO DE PERFIL</label><input type="text" placeholder="FOTO DE PERFIL">
+		<label>FOTO DE PERFIL</label><input class="input" type="text" placeholder="FOTO DE PERFIL">
 		<br><br>
-		<button type="submit"> REGISTRARME </button>
+		<button class="boton" type="submit"> REGISTRARME </button>
 		<br><br>
 	</form>
-
+				<img src="/images/3201052.png" alt="" class="registrafoto">
+				
 	<!-- footer -->
 	<%- include('./partials/footer') %>
 	<!-- /footer -->
