--- a/public/css/app.css
+++ b/public/css/app.css
@@ -274,6 +274,107 @@ overflow: scroll;
   box-shadow: 0 0 5px var(--green);
 }
 
+/*====== registrarse ======*/
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.input {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  width: 100%;
+  max-width: 400px;
+}
+
+.boton {
+  padding: 0.5rem 1rem;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.boton:hover {
+  background-color: #0069d9;
+}
+
+.registrafoto {
+  width: 300px;
+  height: 400px;
+
+    display: block;
+    margin: auto;
+  }
+
+
+/*====== login ======*/
+
+.ingresafoto {
+  width: 200px;
+  height: 300px;
+
+    display: block;
+    margin: auto;
+  }
+
+
+
+/*============*/
+
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.input {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  width: 100%;
+  max-width: 400px;
+}
+
+.checkbox {
+  margin-right: 0.5rem;
+}
+
+.boton {
+  padding: 0.5rem 1rem;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.boton:hover {
+  background-color: #0069d9;
+}
+
 /*====== Footer ======*/
 .main-footer {
   background-color: #000000;
