--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -14,7 +14,7 @@
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
 				</div>
-				
+
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
 						
@@ -40,7 +40,7 @@
 					<li>
 						<form action="" method="GET">
 							<button class="logout" type="submit">
-								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
+								Cerrar sesión <i class="cerrarsesion"></i>
 							</button>
 						</form>
 					</li>
