--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -28,10 +28,10 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<form action="/perfil" method="GET" class=""> <!-- aca antes decia login.html -->
-				<label>IMAGEN</label><input type="file" placeholder="FOTO DE PRODUCTO">
-				<label>NOMBRE DE PRODUCTO</label><input type="text" placeholder="NOMBRE PRODUCTO">
-				<label>DESCRIPCION</label><input type="text" placeholder="DESCRIPCION PRODUCTO">
-				<label>FECHA DE CARGA</label><input type="date" placeholder="FECHA DE CARGA">
+				<label class="imagennn">IMAGEN</label><input type="file" placeholder="FOTO DE PRODUCTO">
+				<label class="input">NOMBRE DE PRODUCTO</label><input type="text" placeholder="NOMBRE PRODUCTO">
+				<label class="input">DESCRIPCION</label><input type="text" placeholder="DESCRIPCION PRODUCTO">
+				<label class="fecha">FECHA DE CARGA</label><input type="date" placeholder="FECHA DE CARGA">
 				<button type="submit"> AGREGAR PRODUCTO </button>
 			</form>
 
