--- a/public/css/app.css
+++ b/public/css/app.css
@@ -114,6 +114,69 @@ hr {
 }
 
 
+
+
+
+/* Estilo para el formulario */
+
+
+/* Estilo para las etiquetas del formulario */
+form label {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+/* Estilo para los campos de entrada del formulario */
+form input[type="text"],
+form input[type="date"],
+form input[type="file"] {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+/* Estilo para el botón del formulario */
+form button[type="submit"] {
+  background-color: none;
+  color: black;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Estilo para el botón de agregar */
+.agregar {
+  background-color: #4CAF50;
+}
+
+/* Estilo para la etiqueta IMAGEN */
+.imagennn {
+  font-size: 16px;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+/* Estilo para la etiqueta FECHA */
+.fecha {
+  font-size: 16px;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+/*====== Main Navbar ======*/
+button.logout {
+  color: white;
+}
 /*====== Main Navbar ======*/
 .btn-toggle-navbar {
   background-color: var(--dark-blue);
@@ -374,6 +437,11 @@ label {
 .boton:hover {
   background-color: #0069d9;
 }
+
+
+/*====== Footer ======*/
+
+
 
 /*====== Footer ======*/
 .main-footer {
