--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<form action="/" method="GET" class=""> 
+			<form action="/profile" method="GET" class=""> 
 				<label>USUARIO</label><input class="input" type="email" placeholder="mail">
 				<br><br>
 				<label>CONTRASEÑA</label><input class="input"  type="password" placeholder="Contraseña">
