ultimos links arreglados y un par de cosas emprolijadas

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link width="" rel="shortcut icon" href="../public/images/loniaz.png" /> 
 	
-	<title> Loniaz </title>
+	<title> Loniaz Art & Design  </title>
 			<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
@@ -24,7 +24,7 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title">Venus de Milo</h2> 
 			<p class="product-detail-description">
-				<a href="/products/add">Agregar a mis productos</a>
+				<a href="/profile">Agregar a mis productos</a>
 			</p>
 		</div>
 
