--- a/public/css/app.css
+++ b/public/css/app.css
@@ -374,8 +374,8 @@ label {
 }
 
 .registrafoto {
-  width: 300px;
-  height: 400px;
+  width: 35%;
+  height: 35%;
 
     display: block;
     margin: auto;
@@ -385,8 +385,8 @@ label {
 /*====== login ======*/
 
 .ingresafoto {
-  width: 200px;
-  height: 300px;
+  width: 30%;
+  height: 30%;
 
     display: block;
     margin: auto;
