--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -30,8 +30,7 @@
 		<!-- Show the "ultimos" products -->
 
 		<form action="/profile" method="GET" class="registroform"> <!-- aca antes decia login.html -->
-			<label class = "registroformlabel">EMAIL</label><input type="email" placeholder="EMAIL" class = "registroinput">
-			<label class = "registroformlabel">NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO" class = "registroinput">
+			<label class = "registroformlabel">EMAIL</label><input type="email" placeholder="EMAIL" class = "registroinput">			<label class = "registroformlabel">NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO" class = "registroinput">
 			<label class = "registroformlabel">CONTRASEÑA</label><input type="password" placeholder="CONTRASEÑA" class = "registroinput">
 			<label class = "registroformlabel">FECHA DE NACIMIENTO</label><input type="date" placeholder="FECHA NACIMIENTO" class = "registroinput">
 			<label class = "registroformlabel">NUMERO DE DOCUMENTO</label><input type="number" placeholder="NRO DOCUMENTO" class = "registroinput"> 
