--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,7 +106,8 @@
 		</section>
 
 		<!-- footer -->
-		<%- include('./partials/footer') %>
+
+		<%- include('./partials/footer') %> 	<!-- archivos parciales, trae un bloque de codigo definido en un js dentro de partials -->
 			<!-- /footer -->
 </body>
 
