--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,11 +31,11 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<form action="/profile" method="GET" class=""> 
-				<label>USUARIO</label><input class="input" type="email" placeholder="mail">
+				<label>USUARIO</label><input class="input" name ="usuario" type="email" placeholder="mail">
 				<br><br>
-				<label>CONTRASEÑA</label><input class="input"  type="password" placeholder="Contraseña">
+				<label>CONTRASEÑA</label><input class="input" name="recordarme" type="password" placeholder="Contraseña">
 				<br><br>
-				<label>Recordarme</label><input  class="checkbox" type="checkbox" placeholder="Recordarme">
+				<label>Recordarme</label><input  name="recordarme" class="checkbox" type="checkbox" placeholder="Recordarme">
 				<br><br>
 				<button  class="boton"  type="submit"> Iniciar sesión </button>
 			</form>
