--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,11 @@
 
 <body>
 	<!-- Header -->
+	<% if(locals.user != undefined) {
+		<%- include('./partials/headerLogueado.ejs') %>
+} else {
 	<%- include('./partials/header.ejs') %>
+}
 		<!-- /Header -->
 
 		<!-- Banner -->
