--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -17,7 +17,11 @@
 </head>
 <body>
 	<!-- Header -->
-	<%- include('./partials/headerLogueado') %>
+	<% if(locals.user != undefined) { %>
+		<%- include('./partials/headerLogueado.ejs') %>
+<% } else { %>
+   <%- include('./partials/header.ejs') %>
+<% } %>
 	<!-- /Header -->
 	
 	<!-- Novedades -->
