--- a/views/product.ejs
+++ b/views/product.ejs
@@ -16,7 +16,11 @@
 </head>
 <body>
 	<!-- Header -->
-	<%- include('./partials/header.ejs') %>
+	<% if(locals.user != undefined) { %>
+		<%- include('./partials/headerLogueado.ejs') %>
+<% } else { %>
+   <%- include('./partials/header.ejs') %>
+<% } %>
 	<!-- /Header -->
 
 	<!-- product detail -->
