--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -18,7 +18,11 @@
 
 <body>
 	<!-- Header -->
-	<%- include('./partials/header.ejs') %>
+	<% if(locals.user != undefined) { %>
+		<%- include('./partials/headerLogueado.ejs') %>
+<% } else { %>
+   <%- include('./partials/header.ejs') %>
+<% } %>
 		<!-- /Header -->
 
 		<!-- Novedades -->
