--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
 			<!-- Show the "ultimos" products -->
 	
 <!-- formulario de registración -->
-	<form action="/users" method="GET" class=""> 
+	<form action="/users" method="POST" class=""> 
 		<label>EMAIL</label><input class="input" type="email" placeholder="EMAIL">
 		<br>
 		<br>
