--- a/views/register.ejs
+++ b/views/register.ejs
@@ -35,15 +35,15 @@
 	
 <!-- formulario de registración -->
 	<form action="/register" method="POST" class=""> 
-		<label>EMAIL</label><input class="input" type="email" placeholder="EMAIL">
+		<label>EMAIL</label><input id="email" class="input" type="email" name="email" placeholder="EMAIL">
 		<br>
 		<br>
-		<label>NOMBRE DE USUARIO</label><input class="input" type="text" placeholder="USUARIO">
+		<label>NOMBRE DE USUARIO</label><input id="username" class="input" type="text" name="username" placeholder="USUARIO">
 		<br>
 		<br>
-		<label>CONTRASEÑA</label><input class="input" type="password" placeholder="CONTRASEÑA">
+		<label>CONTRASEÑA</label><input id="password" class="input" type="password" name="password" placeholder="CONTRASEÑA">
 		<br><br>
-		<label>FECHA DE NACIMIENTO</label><input class="input" type="date" placeholder="FECHA NACIMIENTO">
+		<label>FECHA DE NACIMIENTO</label><input class="input" type="date" name="date" placeholder="FECHA NACIMIENTO">
 		<br><br>
 		<label>NUMERO DE DOCUMENTO</label><input class="input" type="number" placeholder="NRO DOCUMENTO">
 		<br><br> 
