--- a/views/register.ejs
+++ b/views/register.ejs
@@ -41,13 +41,13 @@
 		<label>NOMBRE DE USUARIO</label><input id="username" class="input" type="text" name="username" placeholder="USUARIO">
 		<br>
 		<br>
-		<label>CONTRASEÑA</label><input id="password" class="input" type="password" name="password" placeholder="CONTRASEÑA">
+		<label>CONTRASEÑA</label><input id="contrasena" class="input" type="password" name="contrasena" placeholder="CONTRASEÑA">
 		<br><br>
-		<label>FECHA DE NACIMIENTO</label><input class="input" type="date" name="date" placeholder="FECHA NACIMIENTO">
+		<label>FECHA DE NACIMIENTO</label><input class="input" type="date" name="fecha" id="fecha" placeholder="FECHA NACIMIENTO">
 		<br><br>
-		<label>NUMERO DE DOCUMENTO</label><input class="input" type="number" placeholder="NRO DOCUMENTO">
+		<label>NUMERO DE DOCUMENTO</label><input class="input" type="number" name="dni" placeholder="NRO DOCUMENTO">
 		<br><br> 
-		<label>FOTO DE PERFIL</label><input class="input" type="text" placeholder="FOTO DE PERFIL">
+		<label>FOTO DE PERFIL</label><input class="input" type="text" name="fotodeperfil" placeholder="FOTO DE PERFIL">
 		<br><br>
 		<button class="boton" type="submit"> REGISTRARME </button>
 		<br><br>
